crates/aven-check/tests/fixtures/check/invalid/qualified-operator-relational-v0.av
relational = (left: t, right: u): Bool =>
  left < right
